# micfft

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  Main.qml  common.h  device.cpp  device.h  main.cpp
